// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetList Snapshot 1`] = `
<body>
  <div>
    <div
      class="sc-ikJyIC cieYqL"
    >
      <div
        class="sc-pVTFL igAzgN sc-jJoQJp jwMGZf"
      >
        <a
          class="sc-jrQzAO sc-iqseJM fgcmjD irPoXs"
          href="/ethereum/1"
        >
          <div
            class="sc-gKclnd dNSlal"
          >
            <div
              class="sc-iCfMLu hxewiF"
              size="90"
            />
          </div>
          <h3
            class="sc-hKwDye cQfZTQ"
          >
            1-name
          </h3>
        </a>
        <div
          class="ant-statistic sc-furwcr sc-crHmcD fVdBCY bZrgkD"
        >
          <div
            class="ant-statistic-title"
          >
            Your Stake
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                
                5,000
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
        <div
          class="ant-statistic sc-furwcr sc-egiyK fVdBCY dCoOLj"
        >
          <div
            class="ant-statistic-title"
          >
            Your Rewards
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                
                5,000
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
        <div
          class="sc-kDTinF sc-bqiRlB iNSKQe bWzqsv"
        >
          <button
            class="ant-btn ant-btn-default sc-bdvvtL lhUTfy"
            type="button"
          >
            <span>
              Stake
            </span>
          </button>
          
          
        </div>
      </div>
      <div
        class="sc-pVTFL igAzgN sc-jJoQJp jwMGZf"
      >
        <a
          class="sc-jrQzAO sc-iqseJM fgcmjD irPoXs"
          href="/ethereum/2"
        >
          <div
            class="sc-gKclnd dNSlal"
          >
            <div
              class="sc-iCfMLu hxewiF"
              size="90"
            />
          </div>
          <h3
            class="sc-hKwDye cQfZTQ"
          >
            2-name
          </h3>
        </a>
        <div
          class="ant-statistic sc-furwcr sc-crHmcD fVdBCY bZrgkD"
        >
          <div
            class="ant-statistic-title"
          >
            Your Stake
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                
                5,000
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
        <div
          class="ant-statistic sc-furwcr sc-egiyK fVdBCY dCoOLj"
        >
          <div
            class="ant-statistic-title"
          >
            Your Rewards
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                
                5,000
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
        <div
          class="sc-kDTinF sc-bqiRlB iNSKQe bWzqsv"
        >
          <button
            class="ant-btn ant-btn-default sc-bdvvtL lhUTfy"
            type="button"
          >
            <span>
              Stake
            </span>
          </button>
          
          
        </div>
      </div>
      <div
        class="sc-pVTFL igAzgN sc-jJoQJp jwMGZf"
      >
        <a
          class="sc-jrQzAO sc-iqseJM fgcmjD irPoXs"
          href="/ethereum/3"
        >
          <div
            class="sc-gKclnd dNSlal"
          >
            <div
              class="sc-iCfMLu hxewiF"
              size="90"
            />
          </div>
          <h3
            class="sc-hKwDye cQfZTQ"
          >
            3-name
          </h3>
        </a>
        <div
          class="ant-statistic sc-furwcr sc-crHmcD fVdBCY bZrgkD"
        >
          <div
            class="ant-statistic-title"
          >
            Your Stake
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                
                5,000
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
        <div
          class="ant-statistic sc-furwcr sc-egiyK fVdBCY dCoOLj"
        >
          <div
            class="ant-statistic-title"
          >
            Your Rewards
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                
                5,000
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .00
              </span>
            </span>
          </div>
        </div>
        <div
          class="sc-kDTinF sc-bqiRlB iNSKQe bWzqsv"
        >
          <button
            class="ant-btn ant-btn-default sc-bdvvtL lhUTfy"
            type="button"
          >
            <span>
              Stake
            </span>
          </button>
          
          
        </div>
      </div>
      <ul
        class="ant-pagination sc-hiCibw eDlLfD"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`AssetList Snapshot with empty properties 1`] = `
<body>
  <div>
    <div
      class="sc-ikJyIC cieYqL"
    >
      <div
        class="ant-empty"
      >
        <div
          class="ant-empty-image"
        >
          <svg
            class="ant-empty-img-default"
            height="152"
            viewBox="0 0 184 152"
            width="184"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                transform="translate(24 31.67)"
              >
                <ellipse
                  class="ant-empty-img-default-ellipse"
                  cx="67.797"
                  cy="106.89"
                  rx="67.797"
                  ry="12.668"
                />
                <path
                  class="ant-empty-img-default-path-1"
                  d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                />
                <path
                  class="ant-empty-img-default-path-2"
                  d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                  transform="translate(13.56)"
                />
                <path
                  class="ant-empty-img-default-path-3"
                  d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                />
                <path
                  class="ant-empty-img-default-path-4"
                  d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                />
              </g>
              <path
                class="ant-empty-img-default-path-5"
                d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
              />
              <g
                class="ant-empty-img-default-g"
                transform="translate(149.65 15.383)"
              >
                <ellipse
                  cx="20.654"
                  cy="3.167"
                  rx="2.849"
                  ry="2.815"
                />
                <path
                  d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="ant-empty-description"
        >
          Assets not found
        </div>
      </div>
      <ul
        class="ant-pagination sc-hiCibw eDlLfD"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`AssetList Snapshot with empty properties and sign in button 1`] = `
<body>
  <div>
    <div
      class="sc-ikJyIC cieYqL"
    >
      <div
        class="ant-empty"
      >
        <div
          class="ant-empty-image"
        >
          <svg
            class="ant-empty-img-default"
            height="152"
            viewBox="0 0 184 152"
            width="184"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                transform="translate(24 31.67)"
              >
                <ellipse
                  class="ant-empty-img-default-ellipse"
                  cx="67.797"
                  cy="106.89"
                  rx="67.797"
                  ry="12.668"
                />
                <path
                  class="ant-empty-img-default-path-1"
                  d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                />
                <path
                  class="ant-empty-img-default-path-2"
                  d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                  transform="translate(13.56)"
                />
                <path
                  class="ant-empty-img-default-path-3"
                  d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                />
                <path
                  class="ant-empty-img-default-path-4"
                  d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                />
              </g>
              <path
                class="ant-empty-img-default-path-5"
                d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
              />
              <g
                class="ant-empty-img-default-g"
                transform="translate(149.65 15.383)"
              >
                <ellipse
                  cx="20.654"
                  cy="3.167"
                  rx="2.849"
                  ry="2.815"
                />
                <path
                  d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="ant-empty-description"
        >
          Assets not found
        </div>
        <div
          class="ant-empty-footer"
        >
          <button
            class="ant-btn ant-btn-default sc-bdvvtL lhUTfy"
            type="button"
          >
            <span>
              Sign in
            </span>
          </button>
        </div>
      </div>
      <ul
        class="ant-pagination sc-hiCibw eDlLfD"
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</body>
`;
